--- a/shop-now.html
+++ b/shop-now.html
@@ -55,13 +55,7 @@
       <div class="footer-content">
         <div class="footer-col">
           <h3>I&Y JEWLZ</h3>
-          <p>Your trusted source for premium lab-grown diamond jewelry.</p>
-          <div class="social-links">
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-youtube"></i></a>
-          </div>
+          <p>Your trusted source for premium lab-grown diamond jewelry. We offer the finest selection of rings, necklaces, bracelets, pendants, earrings, watches, and vintage pieces.</p>
         </div>
         <div class="footer-col">
           <h4>Quick Links</h4>
@@ -71,6 +65,65 @@
             <li><a href="about.html">About Us</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
+        </div>
+        <div class="footer-col">
+          <h4>Contact Info</h4>
+          <ul class="contact-info">
+            <li><i class="fas fa-phone"></i> <strong>929-648-0535</strong></li>
+            <li><i class="fas fa-envelope"></i> iyjewlz7@gmail.com</li>
+            <li><i class="fas fa-globe"></i> Online Store Only</li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <h4>Have Questions?</h4>
+          <p>Our team is available to assist you with any inquiries about our lab-grown diamonds and premium jewelry collections.</p>
+          <a href="contact.html" class="btn btn-small">Contact Us</a>
+        </div>
+      </div>
+      <div class="trust-badges">
+        <div class="badges-grid">
+          <div class="badge-item">
+            <i class="fas fa-lock"></i>
+            <span>Secure Checkout</span>
+          </div>
+          <div class="badge-item">
+            <i class="fas fa-star"></i>
+            <span>Lab Grown Diamonds</span>
+          </div>
+          <div class="badge-item">
+            <i class="fas fa-undo"></i>
+            <span>30-Day Returns</span>
+          </div>
+          <div class="badge-item">
+            <i class="fas fa-gem"></i>
+            <span>Premium Quality</span>
+          </div>
+          <div class="badge-item">
+            <i class="fas fa-shipping-fast"></i>
+            <span>Free Shipping $100+</span>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <div class="footer-bottom-left">
+          <p>&copy; 2025 I&Y JEWLZ. All rights reserved. | Online Store Only</p>
+        </div>
+        <div class="footer-bottom-right">
+          <div class="payment-methods">
+            <span class="payment-label">We Accept:</span>
+            <i class="fab fa-cc-amex" title="American Express"></i>
+            <i class="fab fa-cc-visa" title="Visa"></i>
+            <i class="fab fa-cc-mastercard" title="Mastercard"></i>
+            <i class="fas fa-mobile-alt" title="Apple Pay"></i>
+            <i class="fab fa-google" title="Google Pay"></i>
+          </div>
+          <div class="social-footer">
+            <a href="https://facebook.com" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a>
+            <a href="https://instagram.com" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://google.com" target="_blank" title="Google"><i class="fab fa-google"></i></a>
+            <a href="https://twitter.com" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a>
+            <a href="https://wa.me" target="_blank" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+          </div>
         </div>
       </div>
     </div>
