--- a/about.html
+++ b/about.html
@@ -282,7 +282,7 @@
                         <i class="fab fa-google" title="Google Pay"></i>
                     </div>
                     <div class="social-footer">
-                        <a href="https://facebook.com" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/people/IY-JEWLZ/61583055280384/" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a>
                         <a href="https://www.instagram.com/iyjew_lz/" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
                         <a href="https://google.com" target="_blank" title="Google"><i class="fab fa-google"></i></a>
                         <a href="https://twitter.com" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a>
