Update all Google links to I&Y Jewlz Google search across all pages

--- a/contact.html
+++ b/contact.html
@@ -280,7 +280,7 @@
                     <div class="social-footer">
                         <a href="https://www.facebook.com/people/IY-JEWLZ/61583055280384/" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a>
                         <a href="https://www.instagram.com/iyjew_lz/" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
-                        <a href="https://google.com" target="_blank" title="Google"><i class="fab fa-google"></i></a>
+                        <a href="https://www.google.com/search?q=I%26Y+Jewlz" target="_blank" title="Google"><i class="fab fa-google"></i></a>
                         <a href="https://twitter.com" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a>
                         <a href="https://wa.me" target="_blank" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
                     </div>
