--- a/contact.html
+++ b/contact.html
@@ -135,7 +135,7 @@
                 <div class="contact-sidebar">
                     <div class="sidebar-card">
                         <h3>📞 Call Us</h3>
-                        <p><strong>Phone:</strong> 929-648-0535</p>
+                        <p><strong>Phone:</strong> +1 929-648-0535</p>
                         <p><strong>Email:</strong> iyjewlz7@gmail.com</p>
                     </div>
 
@@ -229,7 +229,7 @@
                 <div class="footer-col">
                     <h4>Contact Info</h4>
                     <ul class="contact-info">
-                        <li><i class="fas fa-phone"></i> <strong>929-648-0535</strong></li>
+                        <li><i class="fas fa-phone"></i> <strong>+1 929-648-0535</strong></li>
                         <li><i class="fas fa-envelope"></i> iyjewlz7@gmail.com</li>
                         <li><i class="fas fa-globe"></i> Online Store Only</li>
                     </ul>
