Revert "Switch hero background to webp"
This reverts commit 86a005ef3426586d44c952f69353a491ed7070d8.

--- a/index.html
+++ b/index.html
@@ -34,133 +34,78 @@
         </nav>
     </header>
 
-    <!-- Hero Section - Fresh Layout -->
+    <!-- Hero Section - Landing Page with Logo Background -->
     <section class="hero hero-landing">
         <div class="hero-landing-overlay"></div>
-        <div class="hero-landing-content hero-layout">
-            <div class="hero-left">
-                <p class="eyebrow">Luxury · Lab-Grown · Trusted</p>
-                <h1 class="hero-brand-name">Elevated brilliance, zero compromise.</h1>
-                <p class="hero-brand-subtext">Hand-finished lab-grown diamond pieces with concierge-level guidance.</p>
-                <ul class="hero-points">
-                    <li><i class="fas fa-check"></i> Curated designs with certified stones</li>
-                    <li><i class="fas fa-check"></i> White-glove remote consults</li>
-                    <li><i class="fas fa-check"></i> Free insured shipping on orders $500+</li>
-                </ul>
-                <div class="hero-actions">
-                    <a href="shop-now.html" class="btn btn-primary btn-large">Shop the collection</a>
-                    <a href="contact.html" class="btn btn-outline">Book a consultation</a>
+        <div class="hero-landing-content">
+            <h1 class="hero-brand-name">I & Y JEWLZ</h1>
+            <p class="hero-brand-tagline">Timeless Elegance</p>
+            <p class="hero-brand-subtext">Lab Grown Diamonds • Premium Jewelry</p>
+            <a href="shop-now.html" class="btn btn-primary btn-large hero-landing-btn">Shop Now</a>
+        </div>
+    </section>
+
+    <!-- Features Section -->
+    <section class="features">
+        <div class="container">
+            <div class="features-grid">
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <i class="fas fa-users"></i>
+                    </div>
+                    <h3>BEST CUSTOMER SERVICE</h3>
+                    <p>WE GIVE OUR BEST CUSTOMER SERVICE</p>
                 </div>
-                <div class="hero-meta">
-                    <div class="meta-item">
-                        <span class="meta-label">Avg. delivery</span>
-                        <span class="meta-value">3-5 days</span>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <i class="fas fa-gem"></i>
                     </div>
-                    <div class="meta-item">
-                        <span class="meta-label">Return window</span>
-                        <span class="meta-value">30 days</span>
-                    </div>
-                    <div class="meta-item">
-                        <span class="meta-label">Support</span>
-                        <span class="meta-value">24/7 chat & phone</span>
-                    </div>
+                    <h3>LAB GROWN DIAMONDS</h3>
+                    <p>ETHICALLY SOURCED & CERTIFIED QUALITY</p>
                 </div>
-            </div>
-            <div class="hero-right">
-                <div class="hero-card">
-                    <div class="hero-card-top">
-                        <div>
-                            <p class="mini-label">Signature Pieces</p>
-                            <h3>Modern solitaires · Tennis classics · Custom settings</h3>
-                        </div>
-                        <span class="badge-soft">Lab-Grown</span>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <i class="fas fa-shipping-fast"></i>
                     </div>
-                    <p class="hero-card-body">Every stone is certified, conflict-free, and precision-cut to maximize fire and scintillation.</p>
-                    <div class="hero-card-footer">
-                        <span><i class="fas fa-shield-alt"></i> Lifetime support</span>
-                        <span><i class="fas fa-gem"></i> Ethical luxury</span>
-                        <span><i class="fas fa-box"></i> Insured shipping</span>
+                    <h3>FREE SHIPPING</h3>
+                    <p>Free shipping on orders over $500</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <i class="fas fa-shield-alt"></i>
                     </div>
+                    <h3>SECURE PAYMENT</h3>
+                    <p>100% secure payment processing</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Pillars Section -->
-    <section class="pillars">
+
+    <!-- Banner Section -->
+    <section class="promo-banner">
+        <div class="container">
+            <div class="promo-content">
+                <h2>IF YOU HAVE ANY QUESTION FEEL FREE TO REACH US</h2>
+                <p>Our expert team is here to help you find the perfect piece</p>
+                <a href="contact.html" class="btn btn-light">Contact Us</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Testimonials -->
+    <section class="testimonials">
         <div class="container">
             <div class="section-header">
-                <h2>What makes us different</h2>
-                <p>Intentional design, concierge care, and transparent sourcing—built for a modern jewelry experience.</p>
+                <h2>What Our Customers Say</h2>
+                <p>Customer reviews coming soon</p>
             </div>
-            <div class="pillars-grid">
-                <div class="pillar-card">
-                    <div class="pillar-icon"><i class="fas fa-hand-holding-heart"></i></div>
-                    <h3>Concierge guidance</h3>
-                    <p>One-on-one support to size, style, and personalize every piece to your taste.</p>
+            <div class="testimonials-grid" style="text-align:center;">
+                <div class="coming-soon-banner">
+                    <div style="font-size: 48px;">⭐</div>
+                    <h3>Customer Reviews — Coming Soon</h3>
+                    <p>We're collecting authentic customer feedback. Check back soon!</p>
                 </div>
-                <div class="pillar-card">
-                    <div class="pillar-icon"><i class="fas fa-certificate"></i></div>
-                    <h3>Certified brilliance</h3>
-                    <p>Only certified lab-grown diamonds, precision-cut for exceptional fire and clarity.</p>
-                </div>
-                <div class="pillar-card">
-                    <div class="pillar-icon"><i class="fas fa-people-carry"></i></div>
-                    <h3>White-glove delivery</h3>
-                    <p>Insured, tracked shipping with careful packaging and easy 30-day returns.</p>
-                </div>
-                <div class="pillar-card">
-                    <div class="pillar-icon"><i class="fas fa-leaf"></i></div>
-                    <h3>Ethical by design</h3>
-                    <p>Responsible sourcing and sustainable materials without compromising luxury.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Experience Path Section -->
-    <section class="experience">
-        <div class="container">
-            <div class="section-header">
-                <h2>Your path to the perfect piece</h2>
-                <p>From first idea to unboxing, we keep every step simple, transparent, and personal.</p>
-            </div>
-            <div class="experience-steps">
-                <div class="step-card">
-                    <div class="step-number">01</div>
-                    <h3>Share your vision</h3>
-                    <p>Tell us about your style, setting, and budget. We’ll refine the details together.</p>
-                </div>
-                <div class="step-card">
-                    <div class="step-number">02</div>
-                    <h3>Curate & confirm</h3>
-                    <p>We present tailored options with certifications so you can choose confidently.</p>
-                </div>
-                <div class="step-card">
-                    <div class="step-number">03</div>
-                    <h3>Craft & finish</h3>
-                    <p>Pieces are hand-finished, inspected, and prepared with care for insured delivery.</p>
-                </div>
-                <div class="step-card">
-                    <div class="step-number">04</div>
-                    <h3>Deliver & support</h3>
-                    <p>Receive your piece with white-glove shipping and lifetime support.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- CTA Section -->
-    <section class="cta-panel">
-        <div class="container cta-inner">
-            <div>
-                <p class="eyebrow">Ready when you are</p>
-                <h2>Let’s craft the piece you’ve been thinking about.</h2>
-                <p class="cta-text">Reach out for a quick consult or browse the collection—we respond fast.</p>
-            </div>
-            <div class="cta-actions">
-                <a href="contact.html" class="btn btn-primary">Talk to our team</a>
-                <a href="shop-now.html" class="btn btn-outline">View designs</a>
             </div>
         </div>
     </section>
