Update shop page for Shopify checkout integration and center logo on mobile

--- a/shop.html
+++ b/shop.html
@@ -66,7 +66,7 @@
     <!-- Page Header -->
     <section class="page-header">
         <div class="container">
-            <h1>Shop — Coming Soon</h1>
+            <h1>Shop Our Collection</h1>
             <div class="breadcrumb">
                 <a href="index.html">Home</a>
                 <span>/</span>
@@ -78,10 +78,101 @@
     <!-- Shop Section -->
     <section class="shop-section">
         <div class="container">
-            <div class="coming-soon-banner">
-                <div style="font-size: 64px;">💎</div>
-                <h2>Shop & Categories — Coming Soon</h2>
-                <p>We're preparing a beautiful collection. Please check back later.</p>
+            <div class="products-grid">
+                
+                <!-- Product Card 1 -->
+                <div class="product-card">
+                    <div class="product-image">
+                        <!-- Replace with your product image -->
+                        <img src="images/product-placeholder.jpg" alt="Product Name" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                        <div class="product-card-emoji">💎</div>
+                    </div>
+                    <div class="product-info">
+                        <h3 class="product-title">Product Name 1</h3>
+                        <p class="product-description">Brief product description here</p>
+                        <div class="product-price">$299.99</div>
+                        <!-- PASTE YOUR SHOPIFY CHECKOUT LINK IN THE HREF BELOW -->
+                        <a href="YOUR_SHOPIFY_CHECKOUT_LINK_1" class="btn btn-primary btn-block" target="_blank">Buy Now</a>
+                    </div>
+                </div>
+
+                <!-- Product Card 2 -->
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="images/product-placeholder.jpg" alt="Product Name" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                        <div class="product-card-emoji">💎</div>
+                    </div>
+                    <div class="product-info">
+                        <h3 class="product-title">Product Name 2</h3>
+                        <p class="product-description">Brief product description here</p>
+                        <div class="product-price">$399.99</div>
+                        <!-- PASTE YOUR SHOPIFY CHECKOUT LINK IN THE HREF BELOW -->
+                        <a href="YOUR_SHOPIFY_CHECKOUT_LINK_2" class="btn btn-primary btn-block" target="_blank">Buy Now</a>
+                    </div>
+                </div>
+
+                <!-- Product Card 3 -->
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="images/product-placeholder.jpg" alt="Product Name" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                        <div class="product-card-emoji">💎</div>
+                    </div>
+                    <div class="product-info">
+                        <h3 class="product-title">Product Name 3</h3>
+                        <p class="product-description">Brief product description here</p>
+                        <div class="product-price">$499.99</div>
+                        <!-- PASTE YOUR SHOPIFY CHECKOUT LINK IN THE HREF BELOW -->
+                        <a href="YOUR_SHOPIFY_CHECKOUT_LINK_3" class="btn btn-primary btn-block" target="_blank">Buy Now</a>
+                    </div>
+                </div>
+
+                <!-- Product Card 4 -->
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="images/product-placeholder.jpg" alt="Product Name" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                        <div class="product-card-emoji">💎</div>
+                    </div>
+                    <div class="product-info">
+                        <h3 class="product-title">Product Name 4</h3>
+                        <p class="product-description">Brief product description here</p>
+                        <div class="product-price">$599.99</div>
+                        <!-- PASTE YOUR SHOPIFY CHECKOUT LINK IN THE HREF BELOW -->
+                        <a href="YOUR_SHOPIFY_CHECKOUT_LINK_4" class="btn btn-primary btn-block" target="_blank">Buy Now</a>
+                    </div>
+                </div>
+
+                <!-- Product Card 5 -->
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="images/product-placeholder.jpg" alt="Product Name" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                        <div class="product-card-emoji">💎</div>
+                    </div>
+                    <div class="product-info">
+                        <h3 class="product-title">Product Name 5</h3>
+                        <p class="product-description">Brief product description here</p>
+                        <div class="product-price">$699.99</div>
+                        <!-- PASTE YOUR SHOPIFY CHECKOUT LINK IN THE HREF BELOW -->
+                        <a href="YOUR_SHOPIFY_CHECKOUT_LINK_5" class="btn btn-primary btn-block" target="_blank">Buy Now</a>
+                    </div>
+                </div>
+
+                <!-- Product Card 6 -->
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="images/product-placeholder.jpg" alt="Product Name" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                        <div class="product-card-emoji">💎</div>
+                    </div>
+                    <div class="product-info">
+                        <h3 class="product-title">Product Name 6</h3>
+                        <p class="product-description">Brief product description here</p>
+                        <div class="product-price">$799.99</div>
+                        <!-- PASTE YOUR SHOPIFY CHECKOUT LINK IN THE HREF BELOW -->
+                        <a href="YOUR_SHOPIFY_CHECKOUT_LINK_6" class="btn btn-primary btn-block" target="_blank">Buy Now</a>
+                    </div>
+                </div>
+
+                <!-- Add more product cards as needed -->
+
             </div>
         </div>
     </section>
