--- a/shop-now.html
+++ b/shop-now.html
@@ -4,8 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Shop Now — I&Y JEWLZ</title>
+  <meta http-equiv="refresh" content="0; url=shop.html">
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <script>
+    // Instant redirect for better UX
+    window.location.replace("shop.html");
+  </script>
+
 </head>
 <body>
   <header class="header">
