--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,14 @@
                     <ul class="nav-menu" id="navMenu">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="shop-now.html">Shop Now</a></li>
+                        <li class="nav-dropdown">
+                            <a href="#" style="display: flex; align-items: center; gap: 5px;">Categories <i class="fas fa-chevron-down"></i></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="shop-now.html#watches">Watches</a></li>
+                                <li><a href="shop-now.html#earrings">Earrings</a></li>
+                                <li><a href="shop-now.html#bracelets">Bracelets</a></li>
+                            </ul>
+                        </li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="contact.html" class="active">Contact</a></li>
                     </ul>
