Add all 75 products: 55 watches, 14 earrings, 4 necklaces, 2 bracelets with category navigation

--- a/about.html
+++ b/about.html
@@ -44,6 +44,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="shop-now.html#watches">Watches</a></li>
                                 <li><a href="shop-now.html#earrings">Earrings</a></li>
+                                <li><a href="shop-now.html#necklaces">Necklaces</a></li>
                                 <li><a href="shop-now.html#bracelets">Bracelets</a></li>
                             </ul>
                         </li>
