--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="shop-now.html#watches">Watches</a></li>
                                 <li><a href="shop-now.html#earrings">Earrings</a></li>
+                                <li><a href="shop-now.html#necklaces">Necklaces</a></li>
                                 <li><a href="shop-now.html#bracelets">Bracelets</a></li>
                             </ul>
                         </li>
