Fix typo in customer service feature text

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <i class="fas fa-users"></i>
                     </div>
                     <h3>BEST CUSTOMER SERVICE</h3>
-                    <p>WE GIVE OUR BEST CUSTOMER SERVICE</p>
+                    <p>WE GIVE YOU OUR BEST CUSTOMER SERVICE</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
