feat(mobile): add nav search and fix categories dropdown on mobile

--- a/shop.html
+++ b/shop.html
@@ -37,6 +37,12 @@
                     </a>
                     
                     <ul class='nav-menu' id='navMenu'>
+                        <li class='mobile-search' role='search'>
+                            <div class='mobile-search-container'>
+                                <i class='fas fa-search'></i>
+                                <input type='text' id='mobileSearchInput' placeholder='Search products...' autocomplete='off' />
+                            </div>
+                        </li>
                         <li><a href='index.html'>Home</a></li>
                         <li><a href='shop-now.html'>Shop Now</a></li>
                         <li class='nav-dropdown'>
