--- a/shop-now.html
+++ b/shop-now.html
@@ -25,6 +25,12 @@
             <img src="images/logo.jpg" alt="I&Y JEWLZ" />
           </a>
           <ul class="nav-menu" id="navMenu">
+            <li class="mobile-search" role="search">
+              <div class="mobile-search-container">
+                <i class="fas fa-search"></i>
+                <input type="text" id="mobileSearchInput" placeholder="Search products..." autocomplete="off" />
+              </div>
+            </li>
             <li><a href="index.html">Home</a></li>
             <li><a href="shop-now.html" class="active">Shop Now</a></li>
             <li class="nav-dropdown">
