feat: redesign homepage with new hero, add jewelry repair services, white footer

--- a/index.html
+++ b/index.html
@@ -78,61 +78,63 @@
         </div>
     </div>
 
-    <!-- Hero Section - Landing Page with Logo Background -->
-    <section class="hero hero-landing">
-        <div class="hero-landing-overlay"></div>
-        <div class="hero-landing-content">
-            <p class="hero-brand-tagline">Timeless Elegance</p>
-            <h1 class="hero-brand-name">I & Y JEWLZ</h1>
-            <p class="hero-brand-subtext">Lab Grown Diamonds • Premium Jewelry</p>
-            <a href="shop-now.html" class="btn btn-primary btn-large hero-landing-btn">Shop Now</a>
+    <!-- Hero Section - Centered Brand Message -->
+    <section class="hero-simple">
+        <div class="container">
+            <div class="hero-simple-content">
+                <h1 class="hero-simple-title">I & Y JEWLZ</h1>
+                <p class="hero-simple-tagline">Jewelry that tells your story</p>
+            </div>
         </div>
     </section>
 
-    <!-- Features Section -->
-    <section class="features">
+    <!-- Services Section -->
+    <section class="services-section">
         <div class="container">
-            <div class="features-grid">
-                <div class="feature-card">
-                    <div class="feature-icon">
-                        <i class="fas fa-users"></i>
+            <div class="section-header">
+                <h2>Professional Jewelry Repair Services</h2>
+                <p>Expert care for your treasured pieces</p>
+            </div>
+            <div class="services-grid">
+                <div class="service-card">
+                    <div class="service-icon">
+                        <i class="fas fa-tools"></i>
                     </div>
-                    <h3>BEST CUSTOMER SERVICE</h3>
-                    <p>WE GIVE YOU OUR BEST CUSTOMER SERVICE</p>
+                    <h3>Jewelry Repair</h3>
+                    <p>Professional repair services for all types of jewelry. From simple fixes to complex restorations.</p>
                 </div>
-                <div class="feature-card">
-                    <div class="feature-icon">
+                <div class="service-card">
+                    <div class="service-icon">
+                        <i class="fas fa-ring"></i>
+                    </div>
+                    <h3>Ring Resizing</h3>
+                    <p>Expert ring resizing and restoration services to ensure the perfect fit.</p>
+                </div>
+                <div class="service-card">
+                    <div class="service-icon">
                         <i class="fas fa-gem"></i>
                     </div>
-                    <h3>LAB GROWN DIAMONDS</h3>
-                    <p>ETHICALLY SOURCED & CERTIFIED QUALITY</p>
+                    <h3>Stone Setting</h3>
+                    <p>Precision stone setting and replacement for diamonds and precious gems.</p>
                 </div>
-                <div class="feature-card">
-                    <div class="feature-icon">
-                        <i class="fas fa-shipping-fast"></i>
+                <div class="service-card">
+                    <div class="service-icon">
+                        <i class="fas fa-clock"></i>
                     </div>
-                    <h3>FREE SHIPPING</h3>
-                    <p>Free shipping on orders over $500</p>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon">
-                        <i class="fas fa-shield-alt"></i>
-                    </div>
-                    <h3>SECURE PAYMENT</h3>
-                    <p>100% secure payment processing</p>
+                    <h3>Watch Repair</h3>
+                    <p>Professional watch repair and maintenance services for all brands.</p>
                 </div>
             </div>
         </div>
     </section>
 
-
     <!-- Banner Section -->
     <section class="promo-banner">
         <div class="container">
             <div class="promo-content">
-                <h2>IF YOU HAVE ANY QUESTION FEEL FREE TO REACH US</h2>
-                <p>Our expert team is here to help you find the perfect piece</p>
-                <a href="contact.html" class="btn btn-light">Contact Us</a>
+                <h2>JEWELRY REPAIR & RESTORATION SERVICES</h2>
+                <p>Our expert jewelers are here to restore and repair your precious pieces</p>
+                <a href="contact.html" class="btn btn-light">Contact Us for Repairs</a>
             </div>
         </div>
     </section>
@@ -160,7 +162,7 @@
             <div class="footer-content">
                 <div class="footer-col">
                     <h3>I&Y JEWLZ</h3>
-                    <p>Your trusted source for premium lab-grown diamond jewelry. We offer the finest selection of rings, necklaces, bracelets, pendants, earrings, watches, and vintage pieces.</p>
+                    <p>Your trusted source for premium lab-grown diamond jewelry and professional jewelry repair services. We offer the finest selection of rings, necklaces, bracelets, pendants, earrings, watches, and vintage pieces. Expert jewelry repair and restoration available.</p>
                 </div>
                 <div class="footer-col">
                     <h4>Quick Links</h4>
@@ -180,9 +182,9 @@
                     </ul>
                 </div>
                 <div class="footer-col">
-                    <h4>Have Questions?</h4>
-                    <p>Our team is available to assist you with any inquiries about our lab-grown diamonds and premium jewelry collections.</p>
-                    <a href="contact.html" class="btn btn-small">Contact Us</a>
+                    <h4>Jewelry Repair Services</h4>
+                    <p>Professional jewelry repair, ring resizing, stone setting, watch repair, and restoration services. Our expert jewelers are here to help with all your jewelry repair needs.</p>
+                    <a href="contact.html" class="btn btn-small">Get a Repair Quote</a>
                 </div>
             </div>
             <div class="trust-badges">
