chore: update styles

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
     <!-- Background Image Section -->
     <section class="background-image-section">
-        <img src="images/backround.webp" alt="I&Y JEWLZ Jewelry" class="full-width-image">
+        <img src="images/backround.jpeg" alt="I&Y JEWLZ Jewelry" class="full-width-image">
     </section>
 
     <!-- Services Section -->
