refactor(nav): remove old hamburger/dropdown and rebuild as mobile drawer with accordion categories across pages

--- a/about.html
+++ b/about.html
@@ -29,31 +29,17 @@
         <nav class="navbar">
             <div class="container">
                 <div class="nav-content">
-                    <button class="mobile-menu-btn" id="mobileMenuBtn">
+                    <button class="menu-toggle" id="menuToggle" aria-controls="mobileDrawer" aria-expanded="false" aria-label="Open menu">
                         <i class="fas fa-bars"></i>
                     </button>
                     <a href="index.html" class="logo-brand">
                         <img src="images/logo.jpg" alt="I&Y JEWLZ">
                     </a>
                     
-                    <ul class="nav-menu" id="navMenu">
-                        <li class="mobile-search" role="search">
-                            <div class="mobile-search-container">
-                                <i class="fas fa-search"></i>
-                                <input type="text" id="mobileSearchInput" placeholder="Search products..." autocomplete="off" />
-                            </div>
-                        </li>
+                    <ul class="nav-menu">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="shop-now.html">Shop Now</a></li>
-                        <li class="nav-dropdown">
-                            <a href="#" style="display: flex; align-items: center; gap: 5px;">Categories <i class="fas fa-chevron-down"></i></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="shop.html#watches">Watches</a></li>
-                                <li><a href="shop.html#earrings">Earrings</a></li>
-                                <li><a href="shop.html#necklaces">Necklaces</a></li>
-                                <li><a href="shop.html#bracelets">Bracelets</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="shop.html">Categories</a></li>
                         <li><a href="about.html" class="active">About</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
@@ -66,6 +52,34 @@
                 </div>
             </div>
         </nav>
+        <!-- Mobile Drawer -->
+        <div class="drawer" id="mobileDrawer" aria-hidden="true" role="dialog" aria-modal="true">
+            <div class="drawer-overlay" id="drawerOverlay"></div>
+            <div class="drawer-panel">
+                <button class="drawer-close" id="drawerClose" aria-label="Close menu"><i class="fas fa-times"></i></button>
+                <div class="drawer-content">
+                    <div class="drawer-search" role="search">
+                        <i class="fas fa-search"></i>
+                        <input type="text" placeholder="Search products..." autocomplete="off" />
+                    </div>
+                    <ul class="drawer-menu">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="shop-now.html">Shop Now</a></li>
+                        <li class="accordion">
+                            <button class="accordion-toggle" aria-expanded="false">Categories <i class="fas fa-chevron-down"></i></button>
+                            <ul class="accordion-panel">
+                                <li><a href="shop.html#watches">Watches</a></li>
+                                <li><a href="shop.html#earrings">Earrings</a></li>
+                                <li><a href="shop.html#necklaces">Necklaces</a></li>
+                                <li><a href="shop.html#bracelets">Bracelets</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="about.html" class="active">About</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </header>
 
     <!-- Search Overlay -->
