--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <nav class="navbar">
             <div class="container">
                 <div class="nav-content">
-                    
+                    <button class="mobile-menu-btn" id="mobileMenuBtn">
+                        <i class="fas fa-bars"></i>
+                    </button>
                     <a href="index.html" class="logo-brand">
                         <img src="images/logo.jpg" alt="I&Y JEWLZ">
                     </a>
@@ -27,7 +29,15 @@
                         </li>
                         <li><a href="index.html" class="active">Home</a></li>
                         <li><a href="shop-now.html">Shop Now</a></li>
-                        
+                        <li class="nav-dropdown">
+                            <a href="#" style="display: flex; align-items: center; gap: 5px;">Categories <i class="fas fa-chevron-down"></i></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="shop.html#watches">Watches</a></li>
+                                <li><a href="shop.html#earrings">Earrings</a></li>
+                                <li><a href="shop.html#necklaces">Necklaces</a></li>
+                                <li><a href="shop.html#bracelets">Bracelets</a></li>
+                            </ul>
+                        </li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
