--- a/shop.html
+++ b/shop.html
@@ -39,7 +39,15 @@
                     <ul class='nav-menu'>
                         <li><a href='index.html'>Home</a></li>
                         <li><a href='shop-now.html'>Shop Now</a></li>
-                        <li><a href='shop.html'>Categories</a></li>
+                        <li class='nav-dropdown'>
+                            <a href='#' style='display: flex; align-items: center; gap: 5px;'>Categories <i class='fas fa-chevron-down'></i></a>
+                            <ul class='dropdown-menu'>
+                                <li><a href='#watches'>Watches</a></li>
+                                <li><a href='#earrings'>Earrings</a></li>
+                                <li><a href='#necklaces'>Necklaces</a></li>
+                                <li><a href='#bracelets'>Bracelets</a></li>
+                            </ul>
+                        </li>
                         <li><a href='about.html'>About</a></li>
                         <li><a href='contact.html'>Contact</a></li>
                     </ul>
