Make New Arrivals first in all category menus

--- a/shop-now.html
+++ b/shop-now.html
@@ -30,6 +30,7 @@
             <li class="nav-dropdown">
               <a href="#" style="display: flex; align-items: center; gap: 5px;">Categories <i class="fas fa-chevron-down"></i></a>
               <ul class="dropdown-menu">
+                <li><a href="shop.html#new-arrivals">New Arrivals</a></li>
                 <li><a href="shop.html#watches">Watches</a></li>
                 <li><a href="shop.html#earrings">Earrings</a></li>
                 <li><a href="shop.html#necklaces">Necklaces</a></li>
@@ -64,6 +65,7 @@
           <li class="accordion">
             <button class="accordion-toggle" aria-expanded="false">Categories <i class="fas fa-chevron-down"></i></button>
             <ul class="accordion-panel">
+              <li><a href="shop.html#new-arrivals">New Arrivals</a></li>
               <li><a href="shop.html#watches">Watches</a></li>
               <li><a href="shop.html#earrings">Earrings</a></li>
               <li><a href="shop.html#necklaces">Necklaces</a></li>
