Fix mobile dropdown - show all categories by default, improve search overlay for mobile, add real images to about page

--- a/about.html
+++ b/about.html
@@ -141,7 +141,7 @@
                     <p>WE GIVE OUR BEST CUSTOMER SERVICE and are dedicated to helping you find the perfect piece that speaks to your unique style and celebrates your special occasions. WE CARRY FULL VARIETY AND BEST PRODUCT, from classic engagement rings to contemporary statement pieces.</p>
                 </div>
                 <div class="about-image">
-                    <div class="about-image-emoji">💎✨💍</div>
+                    <img src="images/image1.webp" alt="I&Y JEWLZ - Fine Jewelry" style="width: 100%; height: auto; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.2);">
                 </div>
             </div>
         </div>
@@ -152,7 +152,7 @@
         <div class="container">
             <div class="story-content">
                 <div class="story-image">
-                    <div class="story-image-emoji">📖👑✨</div>
+                    <img src="images/image2.jpg" alt="Our Story - I&Y JEWLZ" style="width: 100%; height: auto; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.2);">
                 </div>
                 <div class="story-text">
                     <h2>Our Story</h2>
