--- a/shop.html
+++ b/shop.html
@@ -960,6 +960,18 @@
                     </div>
                 </div>
 
+                <div class='product-card'>
+                    <div class='product-image'>
+                        <img loading='lazy' src='images/earring4.png' alt='Earring 13'>
+                    </div>
+                    <div class='product-info'>
+                        <h3 class='product-title'>Earring 13</h3>
+                        <p class='product-description'>Product description</p>
+                        <div class='product-price'>\.00</div>
+                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_EARRING13' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
+                    </div>
+                </div>
+
             </div>
 
             <!-- NECKLACES CATEGORY -->
