--- a/shop.html
+++ b/shop.html
@@ -821,9 +821,9 @@
                         <img loading='lazy' src='images/earring1.png' alt='Earring 1'>
                     </div>
                     <div class='product-info'>
-                        <h3 class='product-title'>Earring 1</h3>
-                        <p class='product-description'>Product description</p>
-                        <div class='product-price'>\.00</div>
+                        <h3 class='product-title'>10K Yellow Gold Heart Flower Studs</h3>
+                        <p class='product-description'>Solid 10K yellow gold with cubic zirconia, screw-back closure</p>
+                        <div class='product-price'>$50.00</div>
                         <a href='YOUR_SHOPIFY_CHECKOUT_LINK_EARRING1' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
@@ -833,9 +833,9 @@
                         <img loading='lazy' src='images/earring2.png' alt='Earring 2'>
                     </div>
                     <div class='product-info'>
-                        <h3 class='product-title'>Earring 2</h3>
-                        <p class='product-description'>Product description</p>
-                        <div class='product-price'>\.00</div>
+                        <h3 class='product-title'>925 Sterling Silver Bar Dangle Earrings</h3>
+                        <p class='product-description'>Dainty linear bar design with hook closure, solid 925 sterling silver</p>
+                        <div class='product-price'>$35.00</div>
                         <a href='YOUR_SHOPIFY_CHECKOUT_LINK_EARRING2' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
@@ -845,9 +845,9 @@
                         <img loading='lazy' src='images/earring3.png' alt='Earring 3'>
                     </div>
                     <div class='product-info'>
-                        <h3 class='product-title'>Earring 3</h3>
-                        <p class='product-description'>Product description</p>
-                        <div class='product-price'>\.00</div>
+                        <h3 class='product-title'>10K Yellow Gold Baby CZ Bar Studs</h3>
+                        <p class='product-description'>Solid 10K yellow gold with cubic zirconia bars, screw-back closure</p>
+                        <div class='product-price'>$50.00</div>
                         <a href='YOUR_SHOPIFY_CHECKOUT_LINK_EARRING3' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
@@ -857,9 +857,9 @@
                         <img loading='lazy' src='images/earring5.png' alt='Earring 4'>
                     </div>
                     <div class='product-info'>
-                        <h3 class='product-title'>Earring 4</h3>
-                        <p class='product-description'>Product description</p>
-                        <div class='product-price'>\.00</div>
+                        <h3 class='product-title'>925 Sterling Silver Peace Sign Studs</h3>
+                        <p class='product-description'>Pavé CZ peace sign design, push-back closure, solid 925 sterling silver</p>
+                        <div class='product-price'>$25.00</div>
                         <a href='YOUR_SHOPIFY_CHECKOUT_LINK_EARRING4' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
@@ -870,8 +870,8 @@
                     </div>
                     <div class='product-info'>
                         <h3 class='product-title'>Earring 5</h3>
-                        <p class='product-description'>Product description</p>
-                        <div class='product-price'>\.00</div>
+                        <p class='product-description'>Sold Out</p>
+                        <div class='product-price'>Unavailable</div>
                         <a href='YOUR_SHOPIFY_CHECKOUT_LINK_EARRING5' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
@@ -881,9 +881,9 @@
                         <img loading='lazy' src='images/earring7.png' alt='Earring 6'>
                     </div>
                     <div class='product-info'>
-                        <h3 class='product-title'>Earring 6</h3>
-                        <p class='product-description'>Product description</p>
-                        <div class='product-price'>\.00</div>
+                        <h3 class='product-title'>10K Yellow Gold Ribbon Bow Studs</h3>
+                        <p class='product-description'>Solid 10K yellow gold with cubic zirconia bow design, screw-back closure</p>
+                        <div class='product-price'>$50.00</div>
                         <a href='YOUR_SHOPIFY_CHECKOUT_LINK_EARRING6' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
@@ -894,8 +894,8 @@
                     </div>
                     <div class='product-info'>
                         <h3 class='product-title'>Earring 7</h3>
-                        <p class='product-description'>Product description</p>
-                        <div class='product-price'>\.00</div>
+                        <p class='product-description'>Sold Out</p>
+                        <div class='product-price'>Unavailable</div>
                         <a href='YOUR_SHOPIFY_CHECKOUT_LINK_EARRING7' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
@@ -906,8 +906,8 @@
                     </div>
                     <div class='product-info'>
                         <h3 class='product-title'>Earring 8</h3>
-                        <p class='product-description'>Product description</p>
-                        <div class='product-price'>\.00</div>
+                        <p class='product-description'>Sold Out</p>
+                        <div class='product-price'>Unavailable</div>
                         <a href='YOUR_SHOPIFY_CHECKOUT_LINK_EARRING8' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
@@ -917,9 +917,9 @@
                         <img loading='lazy' src='images/earring11.png' alt='Earring 9'>
                     </div>
                     <div class='product-info'>
-                        <h3 class='product-title'>Earring 9</h3>
-                        <p class='product-description'>Product description</p>
-                        <div class='product-price'>\.00</div>
+                        <h3 class='product-title'>10K Yellow Gold Heart CZ Studs</h3>
+                        <p class='product-description'>Solid 10K yellow gold with cubic zirconia heart design, screw-back closure</p>
+                        <div class='product-price'>$50.00</div>
                         <a href='YOUR_SHOPIFY_CHECKOUT_LINK_EARRING9' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
@@ -929,9 +929,9 @@
                         <img loading='lazy' src='images/earring12.png' alt='Earring 10'>
                     </div>
                     <div class='product-info'>
-                        <h3 class='product-title'>Earring 10</h3>
-                        <p class='product-description'>Product description</p>
-                        <div class='product-price'>\.00</div>
+                        <h3 class='product-title'>10K Yellow Gold Duck Stud Earrings</h3>
+                        <p class='product-description'>Solid 10K yellow gold with cubic zirconia duck design, screw-back closure</p>
+                        <div class='product-price'>$50.00</div>
                         <a href='YOUR_SHOPIFY_CHECKOUT_LINK_EARRING10' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
@@ -942,8 +942,8 @@
                     </div>
                     <div class='product-info'>
                         <h3 class='product-title'>Earring 11</h3>
-                        <p class='product-description'>Product description</p>
-                        <div class='product-price'>\.00</div>
+                        <p class='product-description'>Sold Out</p>
+                        <div class='product-price'>Unavailable</div>
                         <a href='YOUR_SHOPIFY_CHECKOUT_LINK_EARRING11' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
@@ -954,8 +954,8 @@
                     </div>
                     <div class='product-info'>
                         <h3 class='product-title'>Earring 12</h3>
-                        <p class='product-description'>Product description</p>
-                        <div class='product-price'>\.00</div>
+                        <p class='product-description'>Sold Out</p>
+                        <div class='product-price'>Unavailable</div>
                         <a href='YOUR_SHOPIFY_CHECKOUT_LINK_EARRING12' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
@@ -965,9 +965,9 @@
                         <img loading='lazy' src='images/earring4.png' alt='Earring 13'>
                     </div>
                     <div class='product-info'>
-                        <h3 class='product-title'>Earring 13</h3>
-                        <p class='product-description'>Product description</p>
-                        <div class='product-price'>\.00</div>
+                        <h3 class='product-title'>10K Yellow Gold Open Heart CZ Studs</h3>
+                        <p class='product-description'>Solid 10K yellow gold with cubic zirconia open heart design, screw-back closure</p>
+                        <div class='product-price'>$60.00</div>
                         <a href='YOUR_SHOPIFY_CHECKOUT_LINK_EARRING13' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
